# ai_manhwa_translator

./: .gitignore  README.md  app.py  example.env  main.py  practice.py  pyproject.toml  requirements.txt
notebooks/: test_model.py
src/: crop_image.py  detect_text.py  ocr.py  ocr2.py  text_area.py  text_merge.py  text_overlay.py  translate.py  translate2.py  utility.py
