[project]
name = "ai-manhwa-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "google-generativeai>=0.8.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.65.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyperclip>=1.9.0",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.0.1",
    "ultralytics>=8.3.23",
]
